manifests/40-guac-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /guacamole
  name: guacamole-ingress
  namespace: guacamole
  labels:
    app: guacamole
spec:
  rules:
    - host: remote.app.eighty-three.me
      http:
        paths:
          - backend:
              serviceName: guacamole-app
              servicePort: 8080
            # Im getting a https://a39306ab925214a18bbedd2ded635581-1473587611.us-east-1.elb.amazonaws.com/guacamole/guacamole/#/
